--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <form id="calculator">
         <input type="number" id="number1" placeholder="Pierwsza liczba" required>
         <input type="number" id="number2" placeholder="Druga liczba" required>
-        <br>
-        <button ............................>Dodaj</button>
-        <button ............................>">Odejmij</button>
-        <button ............................>">Pomnóż</button>
-        <button ............................>">Podziel</button>
+        <br><br>
+        <button type="button" onclick="calculate('add')">Dodaj</button>
+        <button type="button" onclick="calculate('subtract')">Odejmij</button>
+        <button type="button" onclick="calculate('multiply')">Pomnóż</button>
+        <button type="button" onclick="calculate('divide')">Podziel</button>
     </form>
     <h2>Wynik: <span id="result"></span></h2>
-
     <script src="script.js"></script>
 </body>
 </html>
